# pi-kit

./: .cleave-prompt.md  .gitignore  .gitmodules  .npmignore  .session_log  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  EXTENSION_SDK.md  Justfile  LICENSE  PRIVACY.md  README.md  bootstrap.sh  edges.test.ts  editor_patch.py  extraction.ts  factstore.ts  flake.nix  index.ts  jputman-audit-log.jsonl  minds.test.ts  minds.ts  package.json  storage.ts  template.ts  tsconfig.json  types.ts
.omegon/: history  milestones.json  profile.json
config/: AGENTS.md
core/: Cargo.toml  Containerfile  README.md  cliff.toml  install.sh  install.test.sh  test-container.sh  test-tui.sh
core/crates/omegon-git/: Cargo.toml
core/crates/omegon-git/src/: commit.rs  jj.rs  merge.rs  repo.rs  status.rs  worktree.rs
core/crates/omegon-memory/: Cargo.toml
core/crates/omegon-memory/src/: backend.rs  decay.rs  inmemory.rs  lib.rs  provider.rs  renderer.rs  sqlite.rs  tests.rs  types.rs  util.rs  vault_sync.rs  vectors.rs
data/: extension-authoring-context.md  lex-imperialis.md  model-registry.json  route-matrix.json  scry-extension-context.md  vox-extension-context.md
demos/: setup.sh
design/: agent-loop-resilience.md  clippy-75-refactor.md  deterministic-rendering-tools.md  eval-matrix.md  internal-perf-metrics.md  junior-onramp-progressive-disclosure.md  nex-profiles.md  rust-cleave-orchestrator.md  rust-phase-2.md  skill-aware-child-dispatch.md  tool-execution-permissions.md
docs/: agent-loop-resilience.md  ai-directory-convention.md  archive-branch-cleanup.md  assess-bridge-completed-results.md  assessment-blattman-patterns.md  auspex-agent-builder.md  auspex-attach-handoff.md  auspex-ipc-contract.md  auspex-omegon-launch-contract.md  auth-state-compatibility.md  auto-doc-generation.md  benchmark-finding-rc64-shadow-context.md  benchmark-finding-rc73-om-local-first.md  bootstrap.md  bridge-all-slash-commands.md  bridge-provider-routing.md  canonical-control-action-matrix.md  checkin-triage-command.md  chronos-native-ts.md  claude-code-expectation-friction.md  cleave-process-tree.md  cleave-steer-throttling.md  cleave-submodule-worktree.md  cleave.md  clickable-dashboard.md  clipboard-image-paste.md  commit-tool.md  confirmation-matrix.md  context-aware-uri.md  context-class-taxonomy-and-routing-policy.md  controller-tuning-protocol.md  conv-scroll-strategy.md  conversation-widget.md  core-directives.md  core-distribution.md  cost-reduction.md  dashboard-cleanup.md  dashboard-component-overhaul.md  dashboard-dual-lifecycle.md  dashboard-lifecycle-publisher-consolidation.md  (+143 more)
extensions/: auto-compact.ts  core-renderers.ts  debug.ts  defaults.ts  distill.ts  model-budget.test.ts  model-budget.ts  offline-driver.ts  sci-ui.ts  sermon-widget.ts  sermon.ts  session-log.ts  shared-state.ts  spinner-verbs.ts  status-bar.ts  style.ts  terminal-title.ts  types.d.ts  version-check.ts
nix/: oci.nix  profiles.nix
pkl/: CodexIntegration.pkl  ExtensionManifest.pkl  McpConfig.pkl  Profile.pkl  SkillManifest.pkl  TaskSpec.pkl
prompts/: assess.md  cleave.md  init.md  new-repo.md  oci-login.md  status.md  whoami.md
scripts/: bench_diff.py  bench_summary.py  benchmark_dashboard.py  benchmark_harness.py  bootstrap.sh  build-platform-packages.sh  check_upstream_versions.py  deploy-pi-dev.sh  deploy_cloudflare_pages.py  export-kitty-theme.ts  preinstall.sh  (+7 more)
(+695 files in other folders)
