[package]
name = "omegon-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git operations for Omegon — RepoModel, commit, merge, worktree, submodule"

[features]
default = []
## Enable jj-lib for library-level queries (adds ~500 deps).
## Without this, the jj module uses CLI only.
jj-lib = ["dep:jj-lib"]

[dependencies]
jj-lib = { version = "0.39", optional = true }
git2 = "0.20"
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
jj-lib = "0.39"
