[package]
name = "omegon-memory"
description = "Memory backend for the Omegon agent — fact store, decay, search, injection"
version.workspace = true
edition.workspace = true
license.workspace = true

# Features:
#   agent (default) — Adds MemoryProvider, which implements omegon's
#     ToolProvider + ContextProvider traits for agent loop integration.
#     Pulls in omegon-traits and tokio-util.
#   (no features) — Standalone fact store: MemoryBackend trait, SQLite
#     backend, FTS5 search, vector search, decay math, vault sync.
#     No omegon dependency. Usable by any Rust application.
[features]
default = ["agent"]
agent = ["dep:omegon-traits", "dep:tokio-util"]

[dependencies]
omegon-traits = { path = "../omegon-traits", optional = true }
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
tokio-util = { workspace = true, optional = true }
sha2 = "0.10"
hex = "0.4"

rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
